# rom-thumbnails-downloader

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  match_screenshots.py  pyproject.toml  test_match_screenshots.py
.github/workflows/: tests.yml
data/processed/: consoles.csv
data/processed/consoles/: Amstrad_-_CPC.csv  Amstrad_-_GX4000.csv  Atari_-_2600.csv  Atari_-_5200.csv  Atari_-_7800.csv  Atari_-_Jaguar.csv  Atari_-_Lynx.csv  Atari_-_ST.csv  Atomiswave.csv  Bandai_-_WonderSwan.csv  Bandai_-_WonderSwan_Color.csv  Cannonball.csv  Casio_-_Loopy.csv  Casio_-_PV-1000.csv  Cave_Story.csv  ChaiLove.csv  Coleco_-_ColecoVision.csv  Commodore_-_64.csv  Commodore_-_Amiga.csv  Commodore_-_Plus-4.csv  Commodore_-_VIC-20.csv  DOOM.csv  DOS.csv  Dinothawr.csv  Emerson_-_Arcadia_2001.csv  Entex_-_Adventure_Vision.csv  Epoch_-_Super_Cassette_Vision.csv  Fairchild_-_Channel_F.csv  Flashback.csv  Funtech_-_Super_Acan.csv  GCE_-_Vectrex.csv  GamePark_-_GP32.csv  Handheld_Electronic_Game.csv  Hartung_-_Game_Master.csv  Jump_n_Bump.csv  LeapFrog_-_Leapster_Learning_Game_System.csv  LowRes_NX.csv  Lutro.csv  Magnavox_-_Odyssey2.csv  Mattel_-_Intellivision.csv  (+57 more)
data/raw/: libretro-thumbnails.json
data/raw/consoles/: Amstrad_-_GX4000.json  Atari_-_2600.json  Sega_-_Mega_Drive_-_Genesis.json
docs/: match_screenshots_prd.md
src/rom_thumbnails_downloader/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_cli.py
